Updates from ShareLaTeX

--- a/AddersFamily.tex
+++ b/AddersFamily.tex
@@ -54,6 +54,12 @@
 
 
 
+
+
+
+
+
+
 \subsection{Πρόβλεψης Κρατουμένου}
 Σε αντίθεση με τις προηγούμενες τακτικές βελτίωσης της άθροισης ο Αθροιστής Πρόβλεψης Κρατουμένου ή Carry-Lookahead Adder (CLA) βελτιώνει την ταχύτητα μειώνοντας τον χρόνο υπολογισμού κάθε ενδιάμεσου κρατουμένου καθώς και του τελικού c\_out .
 Αυτή η αρχιτεκτονική υλοποιείται με τον παρακάτω τρόπο :
@@ -69,4 +75,9 @@
 
 Για παράδειγμα σε έναν αθροιστή των τεσσάρων bits η διάδοση του κρατουμένου εισόδου από το πρώτο έως το τελευταίο bit εξαρτάται από την ομάδα διάδοσης κρατουμένου ή Group Propagate (P). Επίσης η παραγωγή κρατουμένου εξαρτάται από την ομάδα παραγωγής κρατουμένου ή Group Generate (G) των τεσσάρων ζευγών. Για το P είναι εύκολο να βρούμε την συνάρτηση bool του εφόσον το έχουμε συναντήσει και στις παραπάνω ομάδες αθροιστών , αντίθετα το G είναι πιο περίπλοκο. 
 
-
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{Pictures/CLA_Architecture.png}
+\caption{CLA Architecture}
+\label{cla_architecture}
+\end{figure}
