--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -152,7 +152,10 @@ max fan-out $ = n/2 + 1$
 }
 
 \subsubsection{Kogge-Stone}
-
+Όπως και οι αρχιτεκτονική που προτάθηκε από τον Sklansky, ετσι και η αρχιτεκτονική
+Kogge-Stone \cite{} έχει μικρό βάθος. Η βασική του όμως διαφορά είναι πως δεν υπάρχει 
+κόμβος με μεγαλύτερο του δυο fan-out, πετυχαίνοντας το θυσιάζοντας από το 
+εμβαδόν του σχεδιασμού.
 
 
 \subsubsection{Brent-Kung}
@@ -181,6 +184,87 @@ Computers, vol. 22, no. 8, pp. 783-791, Aug. 1973.
 J. Sklansky, Conditional Sum Addition Logic, IRE Trans.
 Electronic Computers, vol. 9, no. 6, pp. 226-231, June 1960.
 }
+
+\begin{table}[H]
+\centering
+     \begin{tabular}{  c c c c  } 
+
+        \hline
+        Architecture & Levels(Delay) & nodes(Area) & max fan-out\\
+        \hline
+        
+        Serial &
+        $n-1$ &
+        $n-1$ &
+        $2$\\
+        
+        Sklansky &
+        $\log_2 n$ &
+        $n/2\log_2n$ &
+        $n/2+1$\\
+        
+        Kogge-Stone &
+        $\log_2n$ &
+        $n(\log_2n-1)+1$ &
+        $2$\\
+        
+        Brent-Kung &
+        $2\log_2n-1$ &
+        $ 2(n-1) - \log_2n $ &
+        $\log_2n+1$\\
+        
+        \hline
+        
+        % 0   & 
+        % \begin{tabular}{@{}c@{}}
+        % $g_i = a_i * b_i$\\
+        % $p_i = a_i + b_i$\\
+        % $x_i = a_i \oplus b_i $
+        % \end{tabular}\\\hline
+
+        
+        % 1 (x2)  & 
+        % \begin{tabular}{@{}c@{}}
+        % $R1_i = g_i + g_{i-1}$\\
+        % $Q1_i = p_i * p_{i-1}$
+        % \end{tabular}\\\hline
+
+        % 2 (x4)  & 
+        % \begin{tabular}{@{}c@{}}
+        % $R2_i = R1_i + R1_{i-2} + Q1_{i-3}*R1_{i-4} + Q1_{i-3}*Q1_{i-5}*R1_{i-6}$
+        % \end{tabular}\\\hline
+
+        % D   & 
+        % \begin{tabular}{@{}c@{}}
+        % $ D_i = g_i + p_ig_{i-1} + p_ip_{i-1}p_{i-2}$
+        % \end{tabular}\\\hline
+
+        % SUM   & 
+        % \begin{tabular}{@{}c@{}}
+        % $ sum_i = R2_{i-1}\ ?\ (x_i \oplus D_{i-1})\ :\ x_i$
+        % \end{tabular}\\\hline
+
+    \end{tabular}
+    
+    
+    % \begin{tabularx}{\textwidth}{X} 
+    % \\
+    % \end{tabularx}    
+    
+    
+    % \begin{tabularx}{\textwidth}{| g | X X X X | } 
+    %     \hline\rowcolor{LightGray}
+    %     Symbols & $R1_i$ & $Q1_i$ & $R2_i$ & $D_i$ \\
+    %     \hline\rowcolor{LightGray}
+    %     Equations & $R^1_{i:i-1}$ & $Q^1_{i:i-1}$ & $R^3_{i:i-7}$ &$ D_{i:i-2}$ \\
+    %     \hline
+    % \end{tabularx}
+\caption{Prefix Comparisson}
+\end{table}
+
+
+
+
 
 
 
@@ -226,6 +310,21 @@ Sparsness-4
         &= x_{i+3} \oplus (g_{i+2} + p_{i+2}g_{i+1} + p_{i+2}p_{i+1}g_i + p_{i+2}p_{i+1}p_iG_{i-1:0})\\
     \end{split} 
 \end{equation*}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
