Updates from ShareLaTeX

--- a/references.bib
+++ b/references.bib
@@ -176,8 +176,21 @@ ISSN={0367-9950},
 month={June},}
 
 
-
-
+% ------------------------------------------------------------------------------------
+% Kogge - Stone
+% ------------------------------------------------------------------------------------
+@ARTICLE{5009159, 
+author={P. M. Kogge and H. S. Stone}, 
+journal={IEEE Transactions on Computers}, 
+title={A Parallel Algorithm for the Efficient Solution of a General Class of Recurrence Equations}, 
+year={1973}, 
+volume={C-22}, 
+number={8}, 
+pages={786-793}, 
+keywords={Application software;Bismuth;Concurrent computing;Difference equations;Digital systems;Laboratories;Nonlinear equations;Parallel algorithms;Parallel processing;Polynomials;Parallel algorithms;parallel computation;recurrence problems;recursive doubling}, 
+doi={10.1109/TC.1973.5009159}, 
+ISSN={0018-9340}, 
+month={Aug},}
 
 
 
