Updates from ShareLaTeX

--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -162,7 +162,13 @@ max fan-out $ = n/2 + 1$
 Όπως και οι αρχιτεκτονική που προτάθηκε από τον Sklansky, έτσι και η αρχιτεκτονική
 Kogge-Stone \cite{5009159} έχει μικρό βάθος. Η βασική του όμως διαφορά είναι πως δεν υπάρχει 
 κόμβος με μεγαλύτερο του δυο fan-out, θυσιάζοντας το εμβαδόν του σχεδιασμού.
-
+\begin{figure}[H]
+    \centering
+    %\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
+    \includegraphics[scale=0.45]{Pictures/Kogge-Stone.png}
+    \caption{Kogge-Stone Prefix Tree Adder}
+    \label{Kogge-StoneTree}
+\end{figure}
 
 
 
