Updates from ShareLaTeX

--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -144,7 +144,7 @@ max fan-out $ = 2$
 Μία από τις πρώτες παράλληλες τοπολογίες που προτάθηκε ήταν το 1960 απο τον Sklansky \cite{5219822}. Το πλεονέκτημα της είναι το ελάχιστο βάθος. Στην εικόνα \ref{Ladner-FischerTree} παρουσιάζεται ένα παράδειγμα υπολογισμού των κρατουμένων για είσοδο των οκτώ δυαδικών ψηφίων. Το βάθος σε αυτή την περίπτωση είναι τρία επίπεδα. Παρατηρείται πως ο κόμβος του κρατουμένου $c_4$ εκτός απο το ίδιο το κρατούμενο οδηγεί (Fan-out) επιπλέον τέσσερις εισόδους αλλών κόμβων. Το υψηλό Fan-Out των κόμβων είναι το σημείο στο οποίο μειονεκτεί ο σχεδιασμός αυτος.
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.4]{Ladner-Fischer.png}
+    \includegraphics[scale=0.4]{Sklansky.png}
     \caption{J. Sklansky Prefix Tree Adder}
     \label{Ladner-FischerTree}
 \end{figure}
