Updates from ShareLaTeX

--- a/Development.tex
+++ b/Development.tex
@@ -432,10 +432,10 @@ $G3_{i:i-k+1} = G_{i:i-63} $.
     \end{tabularx}    
     
     
-    \begin{tabularx}{\textwidth}{| g | X X X X | } 
-        \hline\rowcolor{LightGray}
+    \begin{tabularx}{\textwidth}{| c | X X X X | } 
+        \hline%\rowcolor{LightGray}
         Symbols & $R1_i$ & $Q1_i$ & $R2_i$ & $D_i$ \\
-        \hline\rowcolor{LightGray}
+        \hline%\rowcolor{LightGray}
         Equations & $R^1_{i:i-1}$ & $Q^1_{i:i-1}$ & $R^3_{i:i-7}$ &$ D_{i:i-2}$ \\
         \hline
     \end{tabularx}
@@ -491,10 +491,10 @@ $G3_{i:i-k+1} = G_{i:i-63} $.
     \end{tabularx}  
     
     
-    \begin{tabularx}{\textwidth}{| X | X X X X | } 
-        \hline\rowcolor{LightGray}
+    \begin{tabularx}{\textwidth}{| c | X X X X | } 
+        \hline%\rowcolor{LightGray}
         Symbols & $R1_i$ & $Q1_i$ & $R2_i$ & $D_i$ \\
-        \hline\rowcolor{LightGray}
+        \hline%\rowcolor{LightGray}
         Equations & $R^1_{i:i-3}$ & $Q^3_{i:i-3}$ & $R^5_{i:i-15}$ &$ D_{i:i-4}$ \\
         \hline
     \end{tabularx}
@@ -551,10 +551,10 @@ $G3_{i:i-k+1} = G_{i:i-63} $.
     \end{tabularx}  
     
     
-    \begin{tabularx}{\textwidth}{| g | X X X X X X | } 
-        \hline\rowcolor{LightGray}
+    \begin{tabularx}{\textwidth}{| c | X X X X X X | } 
+        \hline%\rowcolor{LightGray}
         Symbols & $R1_i$ & $Q1_i$ & $R2_i$ & $Q2_i$ & $R3_i$ & $D_i$ \\
-        \hline\rowcolor{LightGray}
+        \hline%\rowcolor{LightGray}
         Equations & $R^1_{i:i-1}$ & $Q^1_{i:i-1}$ & $R^3_{i:i-7}$ & $Q^5_{i:i-7}$ 
         & $R^{11}_{i:i-31}$ & $ D_{i:i-10}$ \\
         \hline
@@ -614,10 +614,10 @@ $G3_{i:i-k+1} = G_{i:i-63} $.
     \end{tabularx}  
     
     
-    \begin{tabularx}{\textwidth}{| g | X X X X X X | } 
-        \hline\rowcolor{LightGray}
+    \begin{tabularx}{\textwidth}{| c | X X X X X X | } 
+        \hline%\rowcolor{LightGray}
         Symbols & $R1_i$ & $Q1_i$ & $R2_i$ & $Q2_i$ & $R3_i$ & $D_i$ \\
-        \hline\rowcolor{LightGray}
+        \hline%\rowcolor{LightGray}
         Equations & $R^1_{i:i-3}$ & $Q^3_{i:i-3}$ & $R^5_{i:i-15}$ & $Q^{11}_{i:i-15}$ 
         & $R^{21}_{i:i-63}$ & $ D_{i:i-20}$ \\
         \hline
