--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,4 +1,24 @@
 
 \section{Εισαγωγη}
 
-Οι αριθμητικές μονάδες είναι βασικά στοιχεία στο σύνολο του υλικού των ηλεκτρονικών υπολογιστών . Οι περισσότερες επεξεργαστικές μονάδες έχουν ως βασικό δομικό στοιχείο την Αριθμητική Λογική Μονάδα (ΑΛΜ) ή Arithmetic Logic Unit (ALU) η οποία είναι υπεύθυνη για την υλοποίηση βασικών αριθμητικών πράξεων όπως πρόσθεση και πολλαπλασιασμό αλλά και λογικών πράξεων όπως OR, AND και XOR . Αυτές οι μονάδες είναι κρίσιμες στην ορθή λειτουργία ενός συστήματος όχι μόνο ως προς την λειτουργικότητα αλλά και ως προς την ταχύτητα , κατανάλωση ενέργειας και χώρου. Στην παρούσα διπλωματική εργασία θα αναλυθούν οι αθροιστές και συγκεκριμένα μια υποομάδα αυτών , οι 2n-1 αθροιστές . Η ομάδα αυτών των αθροιστών είναι χρήσιμη στα Συστήματα Αριθμού Υπολειμμάτων ή Residue Number Systems (RNS) , Συστήματα Ανθεκτικά σε Σφάλματα ή Fault-Tolerant Systems , στην ανίχνευση σφάλματος στα συστήματα δικτύου καθώς και στις αριθμητικές πράξεις κινητής υποδιαστολής.
+Οι αριθμητικές μονάδες είναι βασικά στοιχεία στο σύνολο του υλικού των ηλεκτρονικών υπολογιστών. Οι περισσότερες επεξεργαστικές μονάδες έχουν ως βασικό δομικό στοιχείο την Αριθμητική Λογική Μονάδα (ΑΛΜ) ή Arithmetic Logic Unit (ALU) η οποία είναι υπεύθυνη για την υλοποίηση βασικών αριθμητικών πράξεων όπως πρόσθεση και πολλαπλασιασμό αλλά και λογικών πράξεων όπως OR, AND και XOR . Αυτές οι μονάδες είναι κρίσιμες στην ορθή λειτουργία ενός συστήματος όχι μόνο ως προς την λειτουργικότητα αλλά και ως προς την ταχύτητα , κατανάλωση ενέργειας και χώρου. 
+
+Ένα από τα μεγαλύτερα εμπόδια, όσο αφορά την ταχύτητα υπολογισμού του αθροίσματος, είναι ο 
+χρόνος υπολογισμού των ενδιάμεσων κρατουμένων αλλά και του κρατούμενου εξόδου. Μία από τις
+μεγαλύτερες καινοτομίες που παρουσιάστηκαν με σκοπό την ελαχιστοποίηση των χρονικών αυτών 
+διαστημάτων, είναι οι αρχιτεκτονικές πρόβλεψης κρατουμένων. Η δομή των CLA αθροιστών 
+απασχόλησε αρκετά την επιστημονική κοινότητα, με αρκετές προτάσεις υλοποίησης, η κάθε μία
+με διαφορετικές απαιτήσεις πόρων ανάλογα την εφαρμογή.
+
+
+Στην παρούσα διπλωματική εργασία θα αναλυθούν οι αθροιστές και συγκεκριμένα μια υποομάδα αυτών , οι αθροιστές υπολοίπου $2^n-1$. Η ομάδα αυτών των αθροιστών είναι χρήσιμη στα Συστήματα Αριθμού Υπολειμμάτων ή Residue Number Systems (RNS) , Συστήματα Ανθεκτικά σε Σφάλματα ή Fault-Tolerant Systems , στην ανίχνευση σφάλματος στα συστήματα δικτύου καθώς και στις αριθμητικές πράξεις κινητής υποδιαστολής. Οι αθροιστές υπολοίπου δεν διαφέρου πολύ από τους απλούς αθροιστές.
+Αν όχι όλες, τουλάχιστον οι περισσότερες κατηγορίες αθροιστών συμμερίζονται τον υπολογισμό
+των κρατουμένων στο κρίσιμο μονοπάτι τους.
+
+Στα επόμενα κεφάλαια θα πραγματοποιηθεί μια ουσιαστική αναδρομή βασικών αρχιτεκτονικών 
+που αφορούν την πράξη της πρόσθεσης. Θα αναλυθούν οι δομές που είναι πιο διαδεδομένες και
+συνέβαλαν στη πειραματική διαδικασία σχεδιασμού ενός αθροιστή υπολοίπου. Στην συνέχεια 
+θα γίνει μία αναλυτική αναφορά στους αθροιστές υπολοίπου $2^n-1$, καθώς και αρχιτεκτονικές
+βελτιστοποίησης τους. Τέλος, αναπτύσσεται ένας αθροιστής υπολοίπου, συνδυάζοντας διάφορες 
+τεχνικές και σχεδιασμούς που έχουν αναφερθεί. Οι αθροιστές που θα αναπτυχθούν, εφόσον ελεγχθούν επαρκώς, θα συγκριθούν με παρελθοντικές υλοποιήσεις οσο αφορά το χρόνο, χώρο και κατανάλωση ενέργειας.
+
