--- a/Ling.tex
+++ b/Ling.tex
@@ -100,13 +100,13 @@
     \centering
     \begin{subfigure}{.4\textwidth}
         \centering
-        \includegraphics[scale=0.4]{Ling_sum_1.png}
+        \includegraphics[height=4.5cm,width=2.2cm]{Ling_sum_1.png}
         \caption{Απλή προσέγγιση}
         \label{fig:Ling_sum_1}
     \end{subfigure}
     \begin{subfigure}{.4\textwidth}
         \centering
-        \includegraphics[scale=0.4]{Ling_sum_2.png}
+        \includegraphics[height=4.5cm,width=4cm]{Ling_sum_2.png}
         \caption{Εναλλακτική προσέγγιση με πολυπλέκτη}
         \label{fig:Ling_sum_2}
     \end{subfigure}
@@ -148,7 +148,10 @@ $Η$ είναι αυτό που υπολογίζεται τελευταίο χρ
  
  
  
- \subsection{Αραίωση σε Ling Αρχιτεκτονικές}
+\subsection{Αραίωση σε Ling Αρχιτεκτονικές}
+Οι τεχνικές αραίωσης που παρουσιάστηκαν στην παράγραφο \ref{subsection:prefix_sparseness},
+ είναι δυνατό να εφαρμοστούν και στην περίπτωση της παραγοντοποίησης κατά
+ Ling \cite{Sparseness_ling}.
 Sparsness-2
 \begin{equation*}
     \begin{split}
