--- a/references.bib
+++ b/references.bib
@@ -193,6 +193,53 @@ ISSN={0018-9340},
 month={Aug},}
 
 
+% ------------------------------------------------------------------------------------
+% Ladner-Fischer
+% ------------------------------------------------------------------------------------
+@article{Ladner:1980:PPC:322217.322232,
+ author = {Ladner, Richard E. and Fischer, Michael J.},
+ title = {Parallel Prefix Computation},
+ journal = {J. ACM},
+ issue_date = {Oct. 1980},
+ volume = {27},
+ number = {4},
+ month = oct,
+ year = {1980},
+ issn = {0004-5411},
+ pages = {831--838},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/322217.322232},
+ doi = {10.1145/322217.322232},
+ acmid = {322232},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
+% ------------------------------------------------------------------------------------
+% Brent-Kung
+% ------------------------------------------------------------------------------------
+@article{Brent:1982:RLP:1309296.1309891,
+ author = {Brent, R. P. and Kung, H. T.},
+ title = {A Regular Layout for Parallel Adders},
+ journal = {IEEE Trans. Comput.},
+ issue_date = {March 1982},
+ volume = {31},
+ number = {3},
+ month = mar,
+ year = {1982},
+ issn = {0018-9340},
+ pages = {260--264},
+ numpages = {5},
+ url = {http://dx.doi.org/10.1109/TC.1982.1675982},
+ doi = {10.1109/TC.1982.1675982},
+ acmid = {1309891},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Addition, VLSI, VLSI, Addition, area-time complexity, carry lookahead, circuit design, combinational logic, models of computation, parallel addition, parallel polynomial evaluation, prefix computation, area-time complexity, carry lookahead, circuit design, combinational logic, models of computation, parallel addition, parallel polynomial evaluation, prefix computation},
+} 
+
+
 
 
 
