--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,9 @@
 % -----------------------
 \usepackage{multicol}
 
+% Appendix
+% -----------------------
+\usepackage{appendix}
 
 
 % Pictures
@@ -172,7 +175,7 @@ sorting=ynt
 \newcommand{\listequationsname}{\Large{List of Equations}}
 % \renewcommand[\listtablename]{Λίστα Πινάκων}
 % \renewcommand[\listfigurename]{Λίστα Εικόνων}
-
+% \renewcommand{\appendixname}{Παραρτήματα}
 
 %-----------------------------------------------------------------------
 %-----------------------------------------------------------------------
@@ -286,6 +289,13 @@ sorting=ynt
 % -------------------------
 % \import{./}{Proofs.tex}
 % \clearpage
+
+
+
+% Results
+% -------------------------
+\import{./}{Appendices.tex}
+\clearpage
 
 
 
