Updates from ShareLaTeX

--- a/Results.tex
+++ b/Results.tex
@@ -459,19 +459,20 @@ Reports
 \end{center}
 
 
+
 % ---------------------------------------------------------
 
 \begin{center}
 \begin{tikzpicture}[scale=0.7]
 
 \begin{axis}[
-    title={Γράφημα καθυστέρησης},
+    title={Γράφημα καθυστέρησης, sparse-2},
     xlabel={Μήκος εισόδου (bits)},
-    ylabel={Χρονικά καθηστέρηση (ns)},
+    % ylabel={Χρονικά καθηστέρηση (ns)},
     xmin=0, xmax=70,
-    ymin=30, ymax=70,
+    ymin=40, ymax=80,
     xtick={8,16,32,64},
-    ytick={30,40,50,60,70},
+    ytick={40,50,60,70,80},
     legend pos=north west,
     ymajorgrids=true,
     grid style=dashed,
@@ -482,7 +483,7 @@ Reports
     mark=square,
     ]
     coordinates {
-    (8,35)(16,43)(32,48)(64,57)
+    (8,42)(16,48)(32,53)(64,61)
     };
     \legend{Jackson}
 
@@ -491,7 +492,7 @@ Reports
     mark=*,
     ]
     coordinates {
-    (8,39)(16,48)(32,58)(64,65)
+    (8,47)(16,53)(32,64)(64,71)
     };
     \legend{Ling}
 
@@ -500,7 +501,7 @@ Reports
     mark=triangle,
     ]
     coordinates {
-    (8,39)(16,50)(32,55)(64,67)
+    (8,44)(16,54)(32,60)(64,72)
     };
     \legend{Prefix}
 
@@ -511,6 +512,68 @@ Reports
 \end{center}
 
 \end{multicols}
+
+
+
+
+
+
+
+
+\begin{multicols}{2}
+\begin{center}
+\begin{tikzpicture}[scale=0.7]
+
+\begin{axis}[
+    title={Γράφημα καθυστέρησης, sparse-4},
+    xlabel={Μήκος εισόδου (bits)},
+    ylabel={Χρονικά καθηστέρηση (ns)},
+    xmin=0, xmax=70,
+    ymin=40, ymax=90,
+    xtick={8,16,32,64},
+    ytick={40,50,60,70,80,90},
+    legend pos=north west,
+    ymajorgrids=true,
+    grid style=dashed,
+]
+
+\addplot[
+    color=red,
+    mark=square,
+    ]
+    coordinates {
+    (8,40)(16,48)(32,52)(64,62)
+    };
+    \legend{Jackson}
+
+\addplot[
+    color=blue,
+    mark=*,
+    ]
+    coordinates {
+    (8,47)(16,52)(32,63)(64,70)
+    };
+    \legend{Ling}
+
+\addplot[
+    color=green,
+    mark=triangle,
+    ]
+    coordinates {
+    (8,57)(16,67)(32,73)(64,85)
+    };
+    \legend{Prefix}
+
+   \legend{Jackson,Ling,Prefix}
+   
+\end{axis}
+\end{tikzpicture}
+\end{center}
+\end{multicols}
+
+
+
+
 
 
 \textcolor{red}{[Τις μονάδες μέτρησής πρέπει να διορθώσεις]}
