Updates from ShareLaTeX

--- a/Appendices.tex
+++ b/Appendices.tex
@@ -137,5 +137,12 @@
     \label{table:node_modules}
 \end{table}
 
+\section{Παράρτημα - Schematics}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{J8_Color.png}
+    \caption{Jackson 8-bit $2^n-1$ Adder}
+    \label{2^8-1_Tree_2x4}
+\end{figure}
 
 \end{appendices}
