Updates from ShareLaTeX

--- a/Appendices.tex
+++ b/Appendices.tex
@@ -1,5 +1,6 @@
-\begin{appendices}
-\section{Παράρτημα - Node Modules}
+\section{Παράρτημα}
+
+\subsection{Node Modules}
 \label{appendix:Node_modules}
 \begin{table}[H]
 \centering
@@ -137,12 +138,15 @@
     \label{table:node_modules}
 \end{table}
 
-\section{Παράρτημα - Schematics}
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth]{J8_Color.png}
-    \caption{Jackson 8-bit $2^n-1$ Adder}
-    \label{2^8-1_Tree_2x4}
-\end{figure}
 
-\end{appendices}
+% \subsection{Schematics}
+
+% \thispagestyle{empty}
+
+% \begin{figure}[H]
+%     \centering
+%     %\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
+%     \includegraphics[angle=90,scale=0.5]{Pictures/J8_Adder.png}
+%     \caption{Jackson 8-bit $2^n-1$ Adder}
+%     \label{Schematic:Jackson_8}
+% \end{figure}
