--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 
 % Appendix
 % -----------------------
-\usepackage{appendix}
+% \usepackage{appendix}
 
 
 % Pictures
@@ -126,6 +126,7 @@ sorting=ynt
 \definecolor{LightGray}{gray}{0.8}
 \definecolor{White}{gray}{1}
 \newcolumntype{g}{>{\columncolor{Gray}}c}
+
 
 % Changing Numbering Scheme to Include Section Number
 % -----------------------
@@ -292,7 +293,7 @@ sorting=ynt
 
 
 
-% Results
+% Appendices
 % -------------------------
 \import{./}{Appendices.tex}
 \clearpage
