Updates from ShareLaTeX

--- a/Appendices.tex
+++ b/Appendices.tex
@@ -1,6 +1,11 @@
-\section{Παράρτημα}
+\begin{appendices}
 
-\subsection{Node Modules}
+
+
+
+\section{Παράρτημα - Node Modules}
+
+
 \label{appendix:Node_modules}
 \begin{table}[H]
 \centering
@@ -138,7 +143,7 @@
     \label{table:node_modules}
 \end{table}
 
-
+\end{appendices}
 % \subsection{Schematics}
 
 % \thispagestyle{empty}
