--- a/Ling.tex
+++ b/Ling.tex
@@ -151,7 +151,7 @@ $Η$ είναι αυτό που υπολογίζεται τελευταίο χρ
 \subsection{Αραίωση σε Ling Αρχιτεκτονικές}
 Οι τεχνικές αραίωσης που παρουσιάστηκαν στην παράγραφο \ref{subsection:prefix_sparseness},
  είναι δυνατό να εφαρμοστούν και στην περίπτωση της παραγοντοποίησης κατά
- Ling \cite{Sparseness_ling}.
+ Ling \cite{1377160}.
 Sparsness-2
 \begin{equation*}
     \begin{split}
