--- a/Results.tex
+++ b/Results.tex
@@ -1,8 +1,13 @@
-\section{Αποτελέσματα}
+\section{Μετρήσεις και Αποτελέσματα}
 
 Σε αυτό το κεφάλαιο παρουσιάζονται οι μετρήσεις χρόνου, χώρου και κατανάλωσης των αθροιστών 
 που περιγράφηκαν στο προηγούμενο εδάφιο. Για τις μετρήσεις αυτές χρησιμοποιήθηκε το εργαλείο
 σύνθεσης Design Compiler, σε τοπογραφική και μη ρύθμιση.
+
+
+
+
+
 
 
 \subsection{Εργαλείο Μετρήσεων}
@@ -43,6 +48,12 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 
 
+
+
+
+
+
+
 \subsection{Τακτική Μεταγλώττισης}
 
 Για λόγους βελτιστοποίησης απαιτείται η κατάλληλη επιλογή της τακτικής μεταγλώττισης (compile strategy) από το εργαλείο σύνθεσης. Το Design Compiler προσφέρει τις παρακάτω επιλογές :
@@ -56,7 +67,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \end{itemize}
 Για τους σκοπούς της παρούσας εργασίας χρησιμοποιείται η τεχνική Bottom-up, αποσκοπώντας στον περιορισμό των βελτιστοποιήσεων που παρέχει το εργαλείο μόνο στο εσωτερικό των κόμβων, που είναι και το χαμηλότερο επίπεδο της ιεραρχίας. Πέρα από τους κόμβους δεν επιτρέπεται καμία άλλη συναρτησιακή βελτιστοποίηση. Με αυτήν την στρατηγική το εργαλείο δεν έχει την δυνατότητα τροποποίησης της αρχιτεκτονικής των αθροιστών που αναπτύσσονται.
 
-\textcolor{red}{ \\Reports\\\\Τοπογραφικο και μη}
+Επιπλέον, το εργαλείο της Synopsys προσφέρει την δυνατότητα τοπογραφικής μεταγλώττισης και μη. Στην περίπτωση μη-τοπογραφικής μεταγλώττισης αξιοποιούνται οι προδιαγραφές των κυκλωμάτων που παρέχονται από την βιβλιοθήκη και συνυπολογίζονται και επιπλέον λογικές που προστίθενται για την σωστή οδήγηση των πυλών. Στην περίπτωση της τοπογραφικής μεταγλώττισης συνυπολογίζονται στα μοντέλα σύνθεσης οι καθυστερήσεις και ο χώρος των καλωδίων μεταξύ των έτοιμων σχεδιασμένων κυκλωμάτων που παρέχονται από την βιβλιοθήκη, καθώς και η τοποθέτηση των κόμβων.
 
 
 
@@ -417,14 +428,197 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 
 
-\clearpage
+% \clearpage
 % ---------------------------------------------------------
-\begin{multicols}{2}
-[\subsection{Γραφικές}]
-% ---------------------------------------------------------
+% \subsection{Γραφικές}
+% \begin{multicols}{2}
+% % ---------------------------------------------------------
 
+% \begin{center}
+% \begin{tikzpicture}[scale=0.7]
+
+% \begin{axis}[
+%     title={Γράφημα καθυστέρησης},
+%     xlabel={Μήκος εισόδου (bits)},
+%     ylabel={Χρονικά καθηστέρηση (ns)},
+%     xmin=0, xmax=70,
+%     ymin=30, ymax=70,
+%     xtick={8,16,32,64},
+%     ytick={30,40,50,60,70},
+%     legend pos=north west,
+%     ymajorgrids=true,
+%     grid style=dashed,
+% ]
+
+% \addplot[
+%     color=red,
+%     mark=square,
+%     ]
+%     coordinates {
+%     (8,35)(16,43)(32,48)(64,57)
+%     };
+%     \legend{Jackson}
+
+% \addplot[
+%     color=blue,
+%     mark=*,
+%     ]
+%     coordinates {
+%     (8,39)(16,48)(32,58)(64,65)
+%     };
+%     \legend{Ling}
+
+% \addplot[
+%     color=green,
+%     mark=triangle,
+%     ]
+%     coordinates {
+%     (8,39)(16,50)(32,55)(64,67)
+%     };
+%     \legend{Prefix}
+
+%   \legend{Jackson,Ling,Prefix}
+   
+% \end{axis}
+% \end{tikzpicture}
+% \end{center}
+
+
+
+% % ---------------------------------------------------------
+
+% \begin{center}
+% \begin{tikzpicture}[scale=0.7]
+
+% \begin{axis}[
+%     title={Γράφημα καθυστέρησης, sparse-2},
+%     xlabel={Μήκος εισόδου (bits)},
+%     % ylabel={Χρονικά καθηστέρηση (ns)},
+%     xmin=0, xmax=70,
+%     ymin=40, ymax=80,
+%     xtick={8,16,32,64},
+%     ytick={40,50,60,70,80},
+%     legend pos=north west,
+%     ymajorgrids=true,
+%     grid style=dashed,
+% ]
+
+% \addplot[
+%     color=red,
+%     mark=square,
+%     ]
+%     coordinates {
+%     (8,42)(16,48)(32,53)(64,61)
+%     };
+%     \legend{Jackson}
+
+% \addplot[
+%     color=blue,
+%     mark=*,
+%     ]
+%     coordinates {
+%     (8,47)(16,53)(32,64)(64,71)
+%     };
+%     \legend{Ling}
+
+% \addplot[
+%     color=green,
+%     mark=triangle,
+%     ]
+%     coordinates {
+%     (8,44)(16,54)(32,60)(64,72)
+%     };
+%     \legend{Prefix}
+
+%   \legend{Jackson,Ling,Prefix}
+   
+% \end{axis}
+% \end{tikzpicture}
+% \end{center}
+
+% \end{multicols}
+
+
+
+
+
+
+
+
+% \begin{multicols}{2}
+% \begin{center}
+% \begin{tikzpicture}[scale=0.7]
+
+% \begin{axis}[
+%     title={Γράφημα καθυστέρησης, sparse-4},
+%     xlabel={Μήκος εισόδου (bits)},
+%     ylabel={Χρονικά καθηστέρηση (ns)},
+%     xmin=0, xmax=70,
+%     ymin=40, ymax=90,
+%     xtick={8,16,32,64},
+%     ytick={40,50,60,70,80,90},
+%     legend pos=north west,
+%     ymajorgrids=true,
+%     grid style=dashed,
+% ]
+
+% \addplot[
+%     color=red,
+%     mark=square,
+%     ]
+%     coordinates {
+%     (8,40)(16,48)(32,52)(64,62)
+%     };
+%     \legend{Jackson}
+
+% \addplot[
+%     color=blue,
+%     mark=*,
+%     ]
+%     coordinates {
+%     (8,47)(16,52)(32,63)(64,70)
+%     };
+%     \legend{Ling}
+
+% \addplot[
+%     color=green,
+%     mark=triangle,
+%     ]
+%     coordinates {
+%     (8,57)(16,67)(32,73)(64,85)
+%     };
+%     \legend{Prefix}
+
+%   \legend{Jackson,Ling,Prefix}
+   
+% \end{axis}
+% \end{tikzpicture}
+% \end{center}
+% \end{multicols}
+
+
+
+% \textcolor{red}{[Τις μονάδες μέτρησής πρέπει να διορθώσεις]}
+
+
+
+
+
+
+
+
+
+
+
+\subsection{Ανάλυση αποτελεσμάτων}
+Τα αποτελέσματα των μετρήσεων, όπως ήταν και αναμενόμενο, διαφέρουν ανάλογα με τον τρόπο μεταγλώττισης (τοπογραφικό και μη). Στην συνέχεια σχολιάζονται και οι δύο περιπτώσεις όσο αφορά την απόδοση. 
+
+\subsubsection{Σχολιασμός μη-τοπογραφικών αποτελεσμάτων}
+Σύμφωνα με τα αποτελέσματα των μη-τοπογραφικών μετρήσεων, παρατηρείται θετική απόδοση της ταχύτητας σε όλες τις περιπτώσεις. Η αναμενόμενη κατάταξή, όσο αφορά την ταχύτητα, ξεκινά με μεγαλύτερη καθυστέρηση στις απλές τοπολογίες προθεματικών αθροιστών υπολοίπου, και καταλήγει στις τοπολογίες κατά Jackson. Σε παρελθοντικές έρευνες \cite{1377160} και \cite{4633502} έχει αποδειχθεί πως η αθροιστές υπολοίπου $2^n-1$ ling είναι πιο αποδοτικοί από τους simple-prefix. Στα αποτελέσματα όπως φαίνεται και στο γράφημα της εικόνας \ref{graph:non-topo} υπάρχουν περιπτώσεις όπου οι Ling αθροιστές είναι στην χειρότερη περίπτωση.
+
+\begin{figure}[H]
 \begin{center}
-\begin{tikzpicture}[scale=0.7]
+\begin{tikzpicture}[scale=0.9]
 
 \begin{axis}[
     title={Γράφημα καθυστέρησης},
@@ -467,17 +661,25 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
     \legend{Prefix}
 
    \legend{Jackson,Ling,Prefix}
-   
+% 
 \end{axis}
+
+
 \end{tikzpicture}
 \end{center}
+\caption{Γράφημα καθυστέρησης - μήκος εισόδου αθροιστών υπολοίπου}   
+\label{graph:non-topo}
+\end{figure}
 
+Αυτό δεν σημαίνει πως οι μετρήσεις είναι άκυρες. Ο βασικός λόγος που προκαλεί την διαφορά αυτή είναι η επιλογή της βιβλιοθήκης. Οι μετρήσεις της παρούσας εργασίας πάρθηκαν σε τεχνολογία \textcolor{red}{32 ? 28 nm}, ενώ οι μετρήσεις που παρουσιάζονται σε προηγούμενες δημοσιεύσεις συγκρίνοντας τους προθεματικούς αθροιστές με αθροιστές Ling βασίζονται σε τεχνολογίες μεγαλύτερες των 100nm. 
 
+Όσο αφορά την επιτάχυνση των αθροιστών, όπου είναι και ο στόχος της παρούσας εργασίας, είναι εμφανές και από το διάγραμμα αλλά και από τους πίνακες των αποτελεσμάτων πως υπάρχει αισθητό προβάδισμα. Πρέπει όμως να σημειωθεί πως όσο αφορά την απαίτηση πόρων και ενέργειας τα αποτελέσματα είναι αρνητικά, κάτι που είναι επίσης αναμενόμενο εφόσον για την υλοποίηση της παραγοντοποίησης Jackson είναι αναγκαίο να εισαχθούν στο σχεδιασμό επιπλέον κόμβοι για τον υπολογισμό των σημάτων D.
 
-% ---------------------------------------------------------
+Στις παραπάνω τρεις αρχιτεκτονικές προς σύγκριση, εφαρμόστηκε η ίδια ακριβός τεχνική αραίωσης, sparse-2 και sparse-4, με σκοπό την μείωση του εμβαδού. Στα γραφήματα \ref{graph:non-topo-sparse-2} και \ref{graph:non-topo-sparse-4} παρουσιάζονται τα διαγράμματα καθυστέρησης - μήκος εισόδου για sparse-2 και sparse-4 αντίστοιχα.
 
+\begin{figure}[H]
 \begin{center}
-\begin{tikzpicture}[scale=0.7]
+\begin{tikzpicture}[scale=0.9]
 
 \begin{axis}[
     title={Γράφημα καθυστέρησης, sparse-2},
@@ -524,19 +726,17 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \end{axis}
 \end{tikzpicture}
 \end{center}
+\caption{Γράφημα καθυστέρησης - μήκος εισόδου αθροιστών υπολοίπου sparse-2}   
+\label{graph:non-topo-sparse-2}
+\end{figure}
 
-\end{multicols}
+Η κατάταξη ταχύτητας δεν επηρεάζεται, αλλά κάθε αθροιστής επιβαρύνεται με ένα χρονικό διάστημα κερδίζοντας σε εμβαδόν. Αξιοσημείωτο είναι το αποτέλεσμα στην περίπτωση sparse-4, όπου οι αθροιστές παρουσιάζουν μεγαλύτερες διαφορές, όσο αφορά τον χρόνο, σε σχέση με τις δύο προηγούμενες περιπτώσεις, ενώ το εμβαδόν τους δεν έχει την αντίστοιχη απόκλιση.
+
+\begin{figure}[H]
 
 
-
-
-
-
-
-
-\begin{multicols}{2}
 \begin{center}
-\begin{tikzpicture}[scale=0.7]
+\begin{tikzpicture}[scale=0.9]
 
 \begin{axis}[
     title={Γράφημα καθυστέρησης, sparse-4},
@@ -583,11 +783,20 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \end{axis}
 \end{tikzpicture}
 \end{center}
-\end{multicols}
+\caption{Γράφημα καθυστέρησης - μήκος εισόδου αθροιστών υπολοίπου sparse-4}   
+\label{graph:non-topo-sparse-4}
+\end{figure}
 
 
 
 
 
+\subsubsection{Σχολιασμός τοπογραφικών αποτελεσμάτων}
 
-\textcolor{red}{[Τις μονάδες μέτρησής πρέπει να διορθώσεις]}
+
+
+
+\subsection{Συμπεράσματα}
+
+Η χρονική απόδοση υπολογισμού του αθροίσματος υπολοίπου $2^n-1$ στους αθροιστές, που αναπτύχθηκαν στην παρούσα εργασία, είναι θετική στις περισσότερες περιπτώσει. Εφόσον στις μη-τοπογραφικές μετρήσεις το αποτελέσματα είναι πάντα θετικά, η τελικές προδιαγραφές των Jackson $2^n-1$ που αναπτύχθηκαν εξαρτώνται από την βιβλιοθήκη τεχνολογίας. Όσο μεγαλύτερο το τρανζίστορ της τεχνολογίας, τόσο πιο αμελητέα η αντίσταση των καλωδίων καθώς και άλλως φυσικών παραμέτρων που επηρεάζουν την ταχύτητα. Η χρήση τους είναι κατάλληλη όταν οι περιορισμοί διαθέσιμων πόρων και κατανάλωση ενέργειας είναι ελαστικοί. 
+
