--- a/main.tex
+++ b/main.tex
@@ -45,9 +45,7 @@
 % -----------------------
 \usepackage{multicol}
 
-% Appendix
-% -----------------------
-% \usepackage{appendix}
+
 
 
 % Pictures
@@ -82,6 +80,13 @@
 \usepackage{import}
 
 
+% Appendix
+% -----------------------
+\usepackage{appendix}
+
+% Code-Highlighting
+% -----------------------
+\usepackage{minted}
 
 % For Equations
 % -----------------------
