--- a/references.bib
+++ b/references.bib
@@ -251,8 +251,36 @@ month={Aug},}
 }
 
 
-@Article{Sparseness_ling,
-author = {Giorgos Dimitrakopoulos and Dimitris Nikolos},
-title = {High-Speed Parallel-Prefix VLSI Ling Adders},
-year = {2005}
-}
+% ------------------------------------------------------------------------------------
+% High-speed parallel-prefix VLSI Ling adders 
+% ------------------------------------------------------------------------------------
+@ARTICLE{1377160,
+author={G. Dimitrakopoulos and D. Nikolos},
+journal={IEEE Transactions on Computers},
+title={High-speed parallel-prefix VLSI Ling adders},
+year={2005},
+volume={54},
+number={2},
+pages={225-231},
+keywords={VLSI;adders;carry logic;Ling adders;VLSI design;binary addition problem;carry lookahead equations;computer arithmetic;delay reduction;parallel-prefix adders;Added delay;Adders;Circuits;Computer architecture;Computer networks;Concurrent computing;Digital arithmetic;Equations;Floating-point arithmetic;Very large scale integration},
+doi={10.1109/TC.2005.26},
+ISSN={0018-9340},
+month={Feb},}
+
+
+
+% ------------------------------------------------------------------------------------
+% New architectures for modulo 2N - 1 adders
+% ------------------------------------------------------------------------------------
+@INPROCEEDINGS{4633502, 
+author={G. Dimitrakopoulos and D. G. Nikolos and H. T. Vergos and D. Nikolos and C. Efstathiou}, 
+booktitle={2005 12th IEEE International Conference on Electronics, Circuits and Systems}, 
+title={New architectures for modulo 2N - 1 adders}, 
+year={2005}, 
+volume={}, 
+number={}, 
+pages={1-4}, 
+keywords={CMOS logic circuits;adders;logic design;CMOS;Ling-carry formulation;delay penalty;modulo 2N-1 adder;parallel-prefix adder;wiring complexity;Adders;CMOS logic circuits;Computer architecture;Computer networks;Concurrent computing;Delay;Informatics;Routing;Signal generators;Wiring}, 
+doi={10.1109/ICECS.2005.4633502}, 
+ISSN={}, 
+month={Dec},}
