Updates from ShareLaTeX

--- a/modAdder.tex
+++ b/modAdder.tex
@@ -308,7 +308,9 @@ $(g_{n-1},p_{n-1})$ αλλά, όπως έχει προαναφερθεί και 
 % \caption{}
 % \label{}
 \end{figure}
-\textcolor{red}{[Εξήγησε το παρακάτω παράδειγμα]}
+
+
+Στην εικόνα \ref{fig:2^8-1_new_structure} παρουσιάζεται η αρχιτεκτονική ενός 8-bit αθροιστή υπολοίπου $2^n-1$ με σκοπό την αστικοποίηση της παραπάνω κυκλικής έκφρασης. Συγκρίνοντας αυτή την τοπολογία με αυτή της εικόνας \ref{fig:2^n-1_simple_Prefix_structure}, είναι εμφανές η διαφορά του επιπλέον επιπέδου.
 \begin{figure}[H]
 \centering
 % \includegraphics[width=\textwidth]{2^8-1_new_structure.png}
